added logs and cleanup